--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 
@@ -41,16 +42,20 @@ html {
 
 body {
   margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
 #root {
   width: 100%;
   margin: 0;
+  padding: 0;
   text-align: center;
   min-height: 100svh;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 h1,
